force-app/main/default/objects/Purchase_Order_Line_Item__c/Purchase_Order_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Line Item</label>
    <nameField>
        <displayFormat>POLI-{00000}</displayFormat>
        <label>Purchase Order Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>