force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Purchase Order Line Item</relationshipLabel>
    <relationshipName>Purchase_Order_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>