force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Ordered_Qty__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Qty__c</fullName>
    <label>Ordered Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>