force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Previously_Received_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Previously_Received_Quantity__c</fullName>
    <label>Previously Received Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>