force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Received_Qty__c.field-meta.xml
<CustomField>
    <fullName>Received_Qty__c</fullName>
    <label>Received Qty</label>
    <summarizedField>GRN_Line_Item__c.Received_Qty__c</summarizedField>
    <summaryForeignKey>GRN_Line_Item__c.Purchase_Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>